GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/Accept__c.field-meta.xml
<CustomField>
    <fullName>Accept__c</fullName>
    <label>Accept</label>
    <length>250</length>
    <type>Text</type>
</CustomField>