GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/audience__c.field-meta.xml
<CustomField>
    <fullName>audience__c</fullName>
    <label>audience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>