GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/Authorization__c.field-meta.xml
<CustomField>
    <fullName>Authorization__c</fullName>
    <label>Authorization</label>
    <length>250</length>
    <type>Text</type>
</CustomField>