GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/canonicalizedresource__c.field-meta.xml
<CustomField>
    <fullName>canonicalizedresource__c</fullName>
    <label>canonicalizedresource</label>
    <type>TextArea</type>
</CustomField>