GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/DestID__c.field-meta.xml
<CustomField>
    <fullName>DestID__c</fullName>
    <label>DestID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>