GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/EndTokenURL__c.field-meta.xml
<CustomField>
    <fullName>EndTokenURL__c</fullName>
    <label>EndTokenURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>