GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/Expect__c.field-meta.xml
<CustomField>
    <fullName>Expect__c</fullName>
    <label>Expect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>