GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/fileName__c.field-meta.xml
<CustomField>
    <fullName>fileName__c</fullName>
    <label>fileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>