GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/keyName__c.field-meta.xml
<CustomField>
    <fullName>keyName__c</fullName>
    <label>keyName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>