GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/Mock_Data__c.field-meta.xml
<CustomField>
    <fullName>Mock_Data__c</fullName>
    <label>Mock_Data</label>
    <length>50</length>
    <type>Text</type>
</CustomField>