GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/Ocp_Apim_Trace__c.field-meta.xml
<CustomField>
    <fullName>Ocp_Apim_Trace__c</fullName>
    <label>Ocp-Apim-Trace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>