GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/Originator_Assigning_Authority_Oid__c.field-meta.xml
<CustomField>
    <fullName>Originator_Assigning_Authority_Oid__c</fullName>
    <label>Originator-Assigning-Authority-Oid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>