GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/Originator_Name__c.field-meta.xml
<CustomField>
    <fullName>Originator_Name__c</fullName>
    <label>Originator-Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>