GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/resourceUri__c.field-meta.xml
<CustomField>
    <fullName>resourceUri__c</fullName>
    <label>resourceUri</label>
    <type>TextArea</type>
</CustomField>