GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/signedpermissions__c.field-meta.xml
<CustomField>
    <fullName>signedpermissions__c</fullName>
    <label>signedpermissions</label>
    <length>50</length>
    <type>Text</type>
</CustomField>