GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/signedProtocol__c.field-meta.xml
<CustomField>
    <fullName>signedProtocol__c</fullName>
    <label>signedProtocol</label>
    <length>50</length>
    <type>Text</type>
</CustomField>