GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/signedResource__c.field-meta.xml
<CustomField>
    <fullName>signedResource__c</fullName>
    <label>signedResource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>