GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/signedservice__c.field-meta.xml
<CustomField>
    <fullName>signedservice__c</fullName>
    <label>signedservice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>