GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/signedversion__c.field-meta.xml
<CustomField>
    <fullName>signedversion__c</fullName>
    <label>signedversion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>