GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/storageContainer__c.field-meta.xml
<CustomField>
    <fullName>storageContainer__c</fullName>
    <label>storageContainer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>