GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/storageKey__c.field-meta.xml
<CustomField>
    <fullName>storageKey__c</fullName>
    <label>storageKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>