GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/storageName__c.field-meta.xml
<CustomField>
    <fullName>storageName__c</fullName>
    <label>storageName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>