GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/storageUrl__c.field-meta.xml
<CustomField>
    <fullName>storageUrl__c</fullName>
    <label>storageUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>