GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/Tenant_Assigning_Authority_Oid__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Assigning_Authority_Oid__c</fullName>
    <label>Tenant-Assigning-Authority-Oid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>