GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/x_correlation_id__c.field-meta.xml
<CustomField>
    <fullName>x_correlation_id__c</fullName>
    <label>x-correlation-id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>