GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/x_forwarded_for__c.field-meta.xml
<CustomField>
    <fullName>x_forwarded_for__c</fullName>
    <label>x-forwarded-for</label>
    <length>255</length>
    <type>Text</type>
</CustomField>