GloablServices/keshavglobal/force-app/main/default/objects/Integration_Configuration__mdt/fields/x_request_id__c.field-meta.xml
<CustomField>
    <fullName>x_request_id__c</fullName>
    <label>x-request-id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>